--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
 
+project.archivesBaseName='usb-i2c-android'
 group='com.github.3cky'
-def artifactId='usb-i2c-android'
+version='1.0'
 
 android {
     compileSdkVersion 29
@@ -10,8 +11,6 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -22,7 +21,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -36,22 +34,11 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
 }
 
-project.afterEvaluate {
-    publishing {
-        publications {
-            library(MavenPublication) {
-                setGroupId group
-                setArtifactId artifactId
-                version android.defaultConfig.versionName
-
-                artifact bundleReleaseAar
-                artifact androidSourcesJar
-            }
-        }
-    }
-}
-
 task androidSourcesJar(type: Jar) {
     classifier 'sources'
     from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+    archives androidSourcesJar
 }
