Migrate to maven-publish plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.1.0"
+        versionName rootProject.ext.projectVersion
     }
     buildTypes {
         release {
