--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,22 @@
 buildscript {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0-rc01'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
+}
+
+ext {
+    projectVersion = '1.2.0-dev'
 }
 
 task clean(type: Delete) {
