--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion versions.sdk.compile
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdkVersion versions.sdk.min
+        targetSdkVersion versions.sdk.target
     }
 
     buildTypes {
@@ -32,7 +32,7 @@ afterEvaluate {
             maven(MavenPublication) {
                 groupId 'com.github.3cky'
                 artifactId 'usb-i2c-android'
-                version rootProject.ext.projectVersion
+                version versions.project.number
 
                 artifact(androidSourcesJar)
                 artifact(bundleReleaseAar)
