--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
             properties.load(project.rootProject.file('local.properties').newDataInputStream())
             keyAlias properties.getProperty('key.alias')
             keyPassword properties.getProperty('key.password')
-            storeFile file(properties.getProperty('key.store.file'))
+            storeFile file(getProperties().getOrDefault('key.store.file', 'release.keystore'))
             storePassword properties.getProperty('key.store.password')
         }
     }
