Exclude app publishing from JitPack build

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,4 @@ jdk:
 
 install:
   - echo "Publishing library"
-  - ./gradlew clean lib:publishToMavenLocal
+  - ./gradlew clean install -x app:publishToMavenLocal
