Set compileSdkVersion explicitly for app and lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion versions.sdk.compile
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.github.ykc3.android.usbi2c.app"
