--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion versions.sdk.compile
+    namespace 'com.github.ykc3.android.usbi2c.app'
 
     defaultConfig {
         applicationId "com.github.ykc3.android.usbi2c.app"
 
         minSdkVersion versions.sdk.min
         targetSdkVersion versions.sdk.target
+        compileSdk versions.sdk.compile
 
         versionCode versions.project.major * 1000000 + versions.project.minor * 1000 + versions.project.patch
         versionName versions.project.number
@@ -28,6 +29,7 @@ android {
             }
         }
     }
+
     buildTypes {
         debug {
             versionNameSuffix "-debug"
@@ -39,13 +41,17 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    publishing {
+        singleVariant("release")
+    }
 }
 
 afterEvaluate {
     publishing {
         publications {
-            releaseApk(MavenPublication) {
-                from components.release_apk
+            release(MavenPublication) {
+                from components.release
 
                 groupId 'com.github.3cky'
                 artifactId 'usb-i2c-android-app'
@@ -54,24 +60,20 @@ afterEvaluate {
                 artifact source: file('build/outputs/apk/release/app-release.apk'),
                         classifier: 'signed', extension: 'apk'
             }
-            releaseAab(MavenPublication) {
-                from components.release_aab
-
-                groupId 'com.github.3cky'
-                artifactId 'usb-i2c-android-app'
-                version versions.project.number
-            }
         }
+    }
+    publishReleasePublicationToMavenLocal.configure {
+        mustRunAfter packageRelease
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.code.gson:gson:2.10'
 
     implementation project(':lib')
 }
