--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:8.2.2'
     }
 }
 
@@ -24,13 +24,13 @@ allprojects {
 
 ext {
     versions = [
-            sdk: [min: 19, target: 30, compile: 32],
+            sdk: [min: 19, target: 33, compile: 34],
             project: [major: projectVersionMajor,
                       minor: projectVersionMinor,
                       patch: projectVersionPatch,
                       number: "${projectVersionMajor}.${projectVersionMinor}.${projectVersionPatch}"]]
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
