--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion versions.sdk.compile
+    namespace 'com.github.ykc3.android.usbi2c'
 
     defaultConfig {
         minSdkVersion versions.sdk.min
         targetSdkVersion versions.sdk.target
+        compileSdk versions.sdk.compile
     }
 
     buildTypes {
@@ -15,27 +16,28 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-task androidSourcesJar(type: Jar) {
-    classifier 'sources'
-    from android.sourceSets.main.java.srcDirs
-}
-
 afterEvaluate {
     publishing {
         publications {
-            maven(MavenPublication) {
+            release(MavenPublication) {
+                from components.release
+
                 groupId 'com.github.3cky'
                 artifactId 'usb-i2c-android'
                 version versions.project.number
-
-                artifact(androidSourcesJar)
-                artifact(bundleReleaseAar)
             }
         }
     }
