--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.ykc3.android.usbi2c" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
